// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My Book Shelf Favorites Should render correctly snapshot 1`] = `
<div>
  <div
    class="css-1pavchb"
  >
    <div
      class="css-uxib3o"
    >
      <div
        class="css-1jxcnq9"
      >
        <img
          alt="Don't Make Me Think"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=256&q=75 2x"
          style="color: transparent;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-uewl2b"
          >
            Don't Make Me Think
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Steve Krug
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              2000
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            first
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-gsip0b"
      >
        <p
          class="chakra-text css-q2ms4q"
        >
          4.5
          <span
            class="chakra-text css-1xibt3d"
          >
            /5
          </span>
        </p>
        <div
          class="css-iqbc30"
        >
          <p
            class="chakra-text css-0"
          >
            SelfHelpBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-1sv0o68"
      >
        <p
          class="chakra-text css-1619v3u"
        >
          In-Shelf
        </p>
      </div>
      <div
        class="css-1l4iwxf"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-1oer8ip"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-iz364c"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
    <div
      class="css-uxib3o"
    >
      <div
        class="css-1jxcnq9"
      >
        <img
          alt="Rich Dad Poor Dad"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=256&q=75 2x"
          style="color: transparent;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-uewl2b"
          >
            Rich Dad Poor Dad
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Robert T. Kiyosaki
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              1997
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            second
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-gsip0b"
      >
        <p
          class="chakra-text css-q2ms4q"
        >
          4.5
          <span
            class="chakra-text css-1xibt3d"
          >
            /5
          </span>
        </p>
        <div
          class="css-iqbc30"
        >
          <p
            class="chakra-text css-0"
          >
            SelfHelpBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-yjxbuh"
      >
        <p
          class="chakra-text css-1619v3u"
        >
          None
        </p>
      </div>
      <div
        class="css-1l4iwxf"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-1oer8ip"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-iz364c"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
    <div
      class="css-uxib3o"
    >
      <div
        class="css-1jxcnq9"
      >
        <img
          alt="The Design of Everyday Things"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=256&q=75 2x"
          style="color: transparent;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-uewl2b"
          >
            The Design of Everyday Things
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Don Norman
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              1988
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            fourth
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-gsip0b"
      >
        <p
          class="chakra-text css-q2ms4q"
        >
          4.5
          <span
            class="chakra-text css-1xibt3d"
          >
            /5
          </span>
        </p>
        <div
          class="css-iqbc30"
        >
          <p
            class="chakra-text css-0"
          >
            TextBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-yjxbuh"
      >
        <p
          class="chakra-text css-1619v3u"
        >
          None
        </p>
      </div>
      <div
        class="css-1l4iwxf"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-1oer8ip"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-iz364c"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`My Book Shelf Favorites Should render correctly snapshot when user has no favorites 1`] = `
<div>
  <div
    class="css-1pavchb"
  >
    <div
      class="css-uxib3o"
    >
      <div
        class="css-1jxcnq9"
      >
        <img
          alt="Don't Make Me Think"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=256&q=75 2x"
          style="color: transparent;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-uewl2b"
          >
            Don't Make Me Think
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Steve Krug
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              2000
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            first
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-gsip0b"
      >
        <p
          class="chakra-text css-q2ms4q"
        >
          4.5
          <span
            class="chakra-text css-1xibt3d"
          >
            /5
          </span>
        </p>
        <div
          class="css-iqbc30"
        >
          <p
            class="chakra-text css-0"
          >
            SelfHelpBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-1sv0o68"
      >
        <p
          class="chakra-text css-1619v3u"
        >
          In-Shelf
        </p>
      </div>
      <div
        class="css-1l4iwxf"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-38t1hi"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-1k8v1e7"
            focusable="false"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
    <div
      class="css-uxib3o"
    >
      <div
        class="css-1jxcnq9"
      >
        <img
          alt="Rich Dad Poor Dad"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=256&q=75 2x"
          style="color: transparent;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-uewl2b"
          >
            Rich Dad Poor Dad
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Robert T. Kiyosaki
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              1997
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            second
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-gsip0b"
      >
        <p
          class="chakra-text css-q2ms4q"
        >
          4.5
          <span
            class="chakra-text css-1xibt3d"
          >
            /5
          </span>
        </p>
        <div
          class="css-iqbc30"
        >
          <p
            class="chakra-text css-0"
          >
            SelfHelpBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-yjxbuh"
      >
        <p
          class="chakra-text css-1619v3u"
        >
          None
        </p>
      </div>
      <div
        class="css-1l4iwxf"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-38t1hi"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-1k8v1e7"
            focusable="false"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
    <div
      class="css-uxib3o"
    >
      <div
        class="css-1jxcnq9"
      >
        <img
          alt="The Design of Everyday Things"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=256&q=75 2x"
          style="color: transparent;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-uewl2b"
          >
            The Design of Everyday Things
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Don Norman
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              1988
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            fourth
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-gsip0b"
      >
        <p
          class="chakra-text css-q2ms4q"
        >
          4.5
          <span
            class="chakra-text css-1xibt3d"
          >
            /5
          </span>
        </p>
        <div
          class="css-iqbc30"
        >
          <p
            class="chakra-text css-0"
          >
            TextBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-yjxbuh"
      >
        <p
          class="chakra-text css-1619v3u"
        >
          None
        </p>
      </div>
      <div
        class="css-1l4iwxf"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-38t1hi"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-1k8v1e7"
            focusable="false"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
  </div>
</div>
`;
